# LegoRust

./: Cargo.toml  README.md
data_management/: Cargo.toml
data_management/src/: lib.rs
data_management/src/excels/: drill_reader.rs  excel_traits.rs  lytho_reader.rs  rawsample_reader.rs  slope_reader.rs
data_management/src/str/: composite_reader.rs  cross_reader.rs  str_traits.rs
lego_config/: Cargo.toml  test_settings.toml
lego_config/path_config/: read.rs  test_settings.toml
lego_config/src/: read.rs
src/: main.rs
src/data_management/: Cargo.toml
src/data_management/reader/: Cargo.toml
src/data_management/reader/src/: IReader.rs  composite_reader.rs  cross_reader.rs
src/data_management/reader/src/excels/: drill_reader.rs  lytho_reader.rs  rawsample_reader.rs  slope_reader.rs
src/data_management/reader/src/str/: cross_reader.rs
tests/data/3d/: solid_11.mtl
tests/data/excels4/: egim.csv  hamorneklem.csv  litoloji.csv  sondaj.csv
tests/data/halkalar/: cu_composite1.str  cu_enkesit.str
