[package]
name = "LegoRust"
version = "0.1.0"
authors = ["Umut Ucok <ucok.umut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data_management = {path = "../LegoRust/data_management"}
#lego_config = {path = "../LegoRust/lego_config"}
