[package]
name = "data_management"
version = "0.1.0"
authors = ["Umut Ucok <ucok.umut@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"

[reader]
path = "data_management/reader/src/lib.rs"
name = "reader"